[tool.poetry]
name = "myplace"
version = "0.1.0"
description = ""
authors = ["CrayonHanChan <hanjung2400@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.3"
passlib = "^1.7.4"
bcrypt = "^4.2.1"
python-multipart = "^0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
